# airsink

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: auth.h  auth_keys.h  mdns_avahi.h  rtsp_server.h
src/: main.c  mdns_avahi.c  rtsp_server.c
src/auth/: auth.c
src/mdns/: mdns_avahi.c
src/rtsp/: rtsp_server.c
test/: test_server.c
